name:           text-icu
version:        0.6.3.0
synopsis:       Bindings to the ICU library
homepage:       http://bitbucket.org/bos/text-icu
bug-reports:    http://bitbucket.org/bos/text-icu/issues
description:
  Haskell bindings to the International Components for Unicode (ICU)
  libraries.  These libraries provide robust and full-featured Unicode
  services on a wide variety of platforms.
  .
  Features include:
  .
  * Both pure and impure bindings, to allow for fine control over efficiency
    and ease of use.
  .
  * Breaking of strings on character, word, sentence, and line boundaries.
  .
  * Access to the Unicode Character Database (UCD) of character metadata.
  .
  * String collation functions, for locales where the conventions for
    lexicographic ordering differ from the simple numeric ordering of
    character codes.
  .
  * Character set conversion functions, allowing conversion between
    Unicode and over 220 character encodings.
  .
  * Unicode normalization.  (When implementations keep strings in a
    normalized form, they can be assured that equivalent strings have a
    unique binary representation.)
  .
  * Regular expression search and replace.
maintainer:     Bryan O'Sullivan <bos@serpentine.com>
copyright:      2009, 2010 Bryan O'Sullivan
category:       Data, Text
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.6
extra-source-files:
  README.markdown include/hs_text_icu.h tests/benchmarks/Breaker.hs

library
  build-depends:     base < 5, bytestring, text >= 0.9.1.0 && <= 0.11.0.0
  if impl(ghc >= 6.10)
    build-depends:   base >= 4

  exposed-modules:
      Data.Text.ICU
      Data.Text.ICU.Break
      Data.Text.ICU.Char
      Data.Text.ICU.Collate
      Data.Text.ICU.Convert
      Data.Text.ICU.Error
      Data.Text.ICU.Normalize
      Data.Text.ICU.Regex
      Data.Text.ICU.Types
  other-modules:
      Data.Text.ICU.Break.Pure
      Data.Text.ICU.Break.Types
      Data.Text.ICU.Collate.Internal
      Data.Text.ICU.Collate.Pure
      Data.Text.ICU.Convert.Internal
      Data.Text.ICU.Error.Internal
      Data.Text.ICU.Internal
      Data.Text.ICU.Iterator
      Data.Text.ICU.Normalize.Internal
      Data.Text.ICU.Regex.Internal
      Data.Text.ICU.Regex.Pure
      Data.Text.ICU.Text
  c-sources: cbits/text_icu.c
  include-dirs: include
  extra-libraries: icuuc
  if os(mingw32)
    extra-libraries: icuin icudt
  else
    extra-libraries: icui18n icudata

  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

source-repository head
  type:     mercurial
  location: http://bitbucket.org/bos/text-icu

source-repository head
  type:     git
  location: http://github.com/bos/text-icu
