name:           text-icu
version:        0.8.0.1
synopsis:       Bindings to the ICU library
homepage:       https://github.com/haskell/text-icu
bug-reports:    https://github.com/haskell/text-icu/issues
description:
  Haskell bindings to the International Components for Unicode (ICU)
  libraries.  These libraries provide robust and full-featured Unicode
  services on a wide variety of platforms.
  .
  Features include:
  .
  * Both pure and impure bindings, to allow for fine control over efficiency
    and ease of use.
  .
  * Breaking of strings on character, word, sentence, and line boundaries.
  .
  * Access to the Unicode Character Database (UCD) of character metadata.
  .
  * String collation functions, for locales where the conventions for
    lexicographic ordering differ from the simple numeric ordering of
    character codes.
  .
  * Character set conversion functions, allowing conversion between
    Unicode and over 220 character encodings.
  .
  * Unicode normalization.  (When implementations keep strings in a
    normalized form, they can be assured that equivalent strings have a
    unique binary representation.)
  .
  * Regular expression search and replace.
  .
  * Security checks for visually confusable (spoofable) strings.
  .
  * Bidirectional Unicode algorithm
  .
  * Calendar objects holding dates and times.
  .
  * Number and calendar formatting.
maintainer:     Vladimir Shabanov <dev@vshabanov.com>
copyright:      2009-2015 Bryan O'Sullivan
category:       Data, Text
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
  README.markdown
  benchmarks/Breaker.hs
  changelog.md
  include/hs_text_icu.h

tested-with:
  GHC == 7.10.3
  GHC == 8.0.2
  GHC == 8.2.2
  GHC == 8.4.4
  GHC == 8.6.5
  GHC == 8.8.4
  GHC == 8.10.7
  GHC == 9.0.2
  GHC == 9.2.1

library
  default-language:  Haskell98
  build-depends:
    base >= 4.8 && < 5,
    bytestring,
    deepseq >= 1.4.3.0,
    text >=0.9.1.0 && <1.3 || >=2.0 && <2.1,
    time >=1.5 && <1.13
  pkgconfig-depends: icu-i18n >= 62.1

  exposed-modules:
      Data.Text.ICU
      Data.Text.ICU.BiDi
      Data.Text.ICU.Calendar
      Data.Text.ICU.Break
      Data.Text.ICU.Char
      Data.Text.ICU.CharsetDetection
      Data.Text.ICU.Collate
      Data.Text.ICU.Convert
      Data.Text.ICU.DateFormatter
      Data.Text.ICU.Error
      Data.Text.ICU.Locale
      Data.Text.ICU.Normalize
      Data.Text.ICU.Number
      Data.Text.ICU.Normalize2
      Data.Text.ICU.NumberFormatter
      Data.Text.ICU.Regex
      Data.Text.ICU.Shape
      Data.Text.ICU.Spoof
      Data.Text.ICU.Types
  other-modules:
      Data.Text.ICU.BiDi.Internal
      Data.Text.ICU.BitMask
      Data.Text.ICU.Break.Pure
      Data.Text.ICU.Break.Types
      Data.Text.ICU.CharsetDetection.Internal
      Data.Text.ICU.Collate.Internal
      Data.Text.ICU.Collate.Pure
      Data.Text.ICU.Number.Internal
      Data.Text.ICU.Convert.Internal
      Data.Text.ICU.Enumerator
      Data.Text.ICU.Error.Internal
      Data.Text.ICU.Internal
      Data.Text.ICU.Iterator
      Data.Text.ICU.Normalize.Internal
      Data.Text.ICU.Regex.Internal
      Data.Text.ICU.Regex.Pure
      Data.Text.ICU.Spoof.Internal
      Data.Text.ICU.Spoof.Pure
      Data.Text.ICU.Text
  c-sources: cbits/text_icu.c
  cc-options: -Wall -Wextra -pedantic -Wno-deprecated
  include-dirs: include
  if os(darwin)
    extra-lib-dirs:
      /usr/local/opt/icu4c/lib
      /opt/homebrew/opt/icu4c/lib
    include-dirs:
      /usr/local/opt/icu4c/include
      /opt/homebrew/opt/icu4c/include
  extra-libraries: icuuc
  if os(mingw32)
    extra-libraries: icuin icudt icuio
  else
    extra-libraries: icui18n icudata

  ghc-options: -Wall -fwarn-tabs
  if impl(ghc >= 8.0)
    ghc-options:  -Wcompat

test-suite tests
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Tests.hs
  other-modules:    Properties QuickCheckUtils

  ghc-options:
    -Wall -threaded -rtsopts

  build-depends:
    HUnit >= 1.2,
    QuickCheck >= 2.4,
    array,
    base >= 4 && < 5,
    bytestring,
    deepseq >= 1.4.3.0,
    directory,
    ghc-prim,
    random,
    test-framework >= 0.4,
    test-framework-hunit >= 0.2,
    test-framework-quickcheck2 >= 0.2,
    text,
    text-icu
  if impl(ghc <= 8.2)
    build-depends: semigroups

source-repository head
  type:     git
  location: https://github.com/haskell/text-icu
